training-app-deployment/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: training-app-backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: my-backend-image:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
        - name: qr
          image: my-qr-image:latest
          ports:
            - containerPort: 8400
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
