training-app-deployment/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: training-app-backend-prod
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 3000
